app/build.gradle.kts: Añadí JavaFX