@@ -5,7 +5,18 @@
  */
 
 plugins {
+    application
     id("buildlogic.java-application-conventions")
+    id("org.openjfx.javafxplugin") version "0.1.0"
+}
+
+repositories {
+    mavenCentral()
+}
+
+javafx {
+    version = "21"
+    modules("javafx.controls", "javafx.fxml")
 }
 
 dependencies {
@@ -15,4 +26,8 @@ dependencies {
 application {
     // Define the main class for the application.
     mainClass = "koolfileindexer.App"
+    applicationDefaultJvmArgs =
+        listOf(
+            "--add-modules=javafx.controls,javafx.fxml",
+        )
 }
